pipeline updated with sonar