@@ -17,7 +17,7 @@ pipeline {
             }
             steps {
                     withSonarQubeEnv('SONAR_LOCAL') {
-                        sh "${scannerHome}/bin/sonar-scanner -e -Dsonar.projectKey=TasksBackEnd -Dsonar.host.url=http://localhost:9000 -Dsonar.java.binaries=target/classes,target -Dsonar.login=2215737480e8ac632e4db370a944aa1692f272d2 -Dsonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/model/**,**Application.java,**RootController.java"
+                        sh "${scannerHome}/bin/sonar-scanner -e -Dsonar.projectKey=TasksBackEnd -Dsonar.host.url=http://localhost:9000 -Dsonar.java.binaries=target/classes,target -Dsonar.login=2215737480e8ac632e4db370a944aa1692f272d2 -Dsonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/model/**,**Application.java,**RootController.java --add-opens java.base/java.lang=ALL-UNNAMED"
                     }
             }
         }
